style.css
*{
    margin: 0;
    padding: 0; 
    -webkit-tap-highlight-color: transparent;
    -webkit-backface-visibility:  hidden;
    backface-visibility: hidden;
    -webkit-tap-highlight-color:  transparent;
}


html{
    height: 100%;
    box-shadow:inset 0 0 0 2000px hsla(200, 15%, 92%, 0.7);
}

body{
    height: 100%;
    background-image: url(images/mario_clouds_desktop_by_sadistmoi_d23mm2j.jpg);
    display: flex;
    justify-content: center;
    align-items: center;
}

.disable-select {
    user-select: none; /* supported by Chrome and Opera */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
}

button:hover, button:focus {
    outline: none;
}

.calculator{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 600px;
    width: 400px;
    border-radius: 8px;
    background-color: #f2e4fd;
    box-shadow: rgba(0, 0, 0, 0.589) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
   
   
}

.display{
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-end;
    height: 100px;
    width:340px;
    margin-top: 15px;
    padding-right: 10px;
    background-color: rgb(255, 255, 255);
    box-shadow: inset 1px 1px 3px rgb(71, 71, 71);
    border:1.5px solid rgb(0, 0, 0);
    border-radius: 5px;
    font-size: 30px;
    font-family: 'Quantico', sans-serif;    
}

.calc{
    font-size: 15px;
}
.button-container{
    display: flex;
    gap:6px;
    margin-bottom: 20px;
    text-align: center;

}

.rows{
    display: flex;
    align-content: center;
    flex-direction: column;
    gap: 10px; 
}

.column-container{
   display: flex;
   flex-direction: column;
}
.column{
    margin-bottom: 10px;
}

.button{
    display: inline-block;
    position: relative;
    text-align: center;
    height: 65px;
    width: 75px;
    margin-right: 8px;
    border-style: none;
    border-radius: 8px;
    border: 1px solid white ;
    text-decoration: none; 
    font-size: 20px;
    font-family: 'Press Start 2P', cursive;
    color: white;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;  
}

.number{
    background: #FFCBC4;
    box-shadow: 4px 4px 0px 0px #FFA7A6, 4px 4px 0px 2px rgb(80, 79, 79);
}

.number:active {
  background-color: #FFCBC4;
  box-shadow:  inset 1px 1px 0px 1px rgb(80, 79, 79), inset 6px 6px 0px 0px #FFA7A6;
  
  transform: translate(3px, 4px) scale(1.068, 1.098) ;
 
}
    

.operand.button{
    background-color: #adeadb;
    box-shadow: 4px 4px 0px 0px #63d3cd, 4px 4px 0px 2px rgb(80, 79, 79);
    
}

.operand:active {
    background-color: #adeadb;
    box-shadow:  inset 1px 1px 0px 1px rgb(80, 79, 79), inset 6px 6px 0px 0px #63d3cd;
    transform: translate(3px, 4px) scale(1.068, 1.098) ;

  }


.clear{
    background-color: #ffffb8;
    box-shadow: 4px 4px 0px 0px #f5da41, 4px 4px 0px 2px rgb(80, 79, 79);
}

.clear:active {
    background-color: #ffffb8;
    box-shadow:  inset 1px 1px 0px 1px rgb(80, 79, 79), inset 6px 6px 0px 0px #f5da41;
    transform: translate(3px, 4px) scale(1.068, 1.098) ;
  }

#equals{
    background-color: #adeadb; 
    height: 140px;
    width: 75px;
    box-shadow: 4px 4px 0px 0px #63d3cd, 4px 4px 0px 2px rgb(80, 79, 79);
}
#equals:active {
    background-color: #adeadb; 
    box-shadow:  inset 1px 1px 0px 1px rgb(80, 79, 79), inset 6px 6px 0px 0px #63d3cd;
    transform: translate(3px, 4px) scale(1.068, 1.05) ;
  }


  @media  (max-width:700px) {
    .calculator{
        height: 520px;
        width: 340px;
    }   
    .button{
        height: 55px;
        width: 65px;
    }
    .display{
        height: 100px;
        width: 290px;
    }
    #equals{
        height: 120px;
        width: 65px;
    }
   }

   

  

